# MLPNN_Test_Project

./: BooleanArithmetic.cpp  BooleanArithmetic.h  CMakeLists.txt  Convolution.cpp  Convolution.h  ImageHeader.h  LabelHeader.h  Layer.cpp  Layer.h  Neuron.cpp  Neuron.h  Perceptron.cpp  Perceptron.h  UtilityFunctions.cpp  UtilityFunctions.h  main.cpp
unittest/: CMakeLists.txt  main.cpp  testy.cpp
